--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="./images/logo.png" class="logo">
+                <img src="images/logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -39,7 +39,7 @@
         <div class="contrainer">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="./images/user.png">
+                    <img src="images/user.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About me</h1>
@@ -105,7 +105,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="./images/work-1.png">
+                    <img src="images/work-1.png">
                     <div class="layer">
                         <h3>Rogue Trails</h3>
                         <p>This is a top-down Zelda esc game</p>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./images/work-2.png">
+                    <img src="images/work-2.png">
                     <div class="layer">
                         <h3>Integral Calculator</h3>
                         <p>A calculator made to calculate integrals</p>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./images/work-3.png">
+                    <img src="images/work-3.png">
                     <div class="layer">
                         <h3>DnD character sheet app</h3>
                         <p>An app to make and keep track of DnD character sheets, as well as having the ability to also roll</p>
@@ -146,7 +146,7 @@
                         <a href="https://www.instagram.com/nicken_oo/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/nicholas-woo-311469284/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="./images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
